<resources>
    <string name="app_name">Mobile Pizza</string>

    <string name="error">Ошибка</string>
    <string name="size">см</string>
    <string name="dough">тесто</string>
    <string name="from">от</string>
    <string name="quantity">шт.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="connection_lost">Интернет соединение потеряно</string>
    <string name="repeat_connection_later">Повторите попытку позже</string>
    <string name="repeat_connection">Повторить</string>

    <!-- Navigation -->
    <string name="food_fragment_title">Меню</string>
    <string name="cart_fragment_title">Корзина</string>
    <string name="profile_fragment_title">Профиль</string>
    <string name="contacts_fragment_title">Контакты</string>

    <!-- Contacts Fragment -->
    <string name="support_text">Связаться с поддержкой</string>

    <!-- Food Activity -->
    <string name="small_pizza">Маленькая</string>
    <string name="medium_pizza">Средняя</string>
    <string name="big_pizza">Большая</string>
    <string name="traditional_dough">Традиционное</string>
    <string name="thin_dough">Тонкое</string>
    <string name="add_to_cart">В корзину за</string>
    <string name="add_pizza_success">Пицца добавлена в корзину</string>
    <string name="add_snack_success">Еда добавлена в корзину</string>
    <string name="add_drink_success">Напиток добавлен в корзину</string>

    <!-- History Activity -->
    <string name="sum">Сумма</string>
    <string name="repeat_order">Повторить заказ</string>
    <string name="empty">Пусто</string>
    <string name="view_order">Посмотреть заказ</string>
    <string name="order_added_to_cart">Заказ добавлен в корзину</string>

    <!-- OrderView Activity -->
    <string name="order_time">Время заказа</string>

    <!-- Profile Fragment -->
    <string name="profile_user_name">Имя</string>
    <string name="profile_phone_number">Номер телефона</string>
    <string name="profile_order_history">История заказов</string>
    <string name="profile_address">Адрес доставки</string>
    <string name="profile_email">Почта</string>
    <string name="add_phone_name">Введите ваше имя</string>
    <string name="add_phone_name_success">Имя добавлено</string>
    <string name="address_incorrect">Введите адрес доставки</string>
    <string name="add_phone_number">Добавить номер телефона</string>
    <string name="edit_phone_number">Изменить номер телефона</string>
    <string name="add_phone_success">Номер телефона добавлен</string>
    <string name="add_address">Добавить адрес доставки</string>
    <string name="add_address_success">Адрес доставки добавлен</string>
    <string name="add">Добавить</string>
    <string name="logout">Выйти</string>

    <!-- Cart Fragment -->
    <string name="delivery">Доставка</string>
    <string name="cost_order">Стоимость заказа</string>
    <string name="cart_empty">В корзине пусто</string>
    <string name="cart_cleared">Корзина очищена</string>
    <string name="cart_warn">Вы действительно хотите очистить корзину?</string>
    <string name="cart_clear">Очистить корзину</string>
    <string name="item">товар</string>
    <string name="items">товаров</string>
    <string name="amount">на</string>
    <string name="order_added">Заказ добавлен, ожидайте доставки</string>
    <string name="make_order">Оформить за</string>
    <string name="make_order_confirm">Оформить заказ</string>
    <string name="add_other_address">Добавить другой адрес</string>

    <!-- Auth Activity -->
    <string name="google_sign_in">Войти с помощью Google</string>
    <string name="phone_sign_in">Войти с помощью телефона</string>

    <!-- Phone Auth Activity -->
    <string name="phone_number">Номер телефона</string>
    <string name="phone_description">Пожалуйста введите свой номер телефона</string>
    <string name="continue_txt">Продолжить</string>
    <string name="number_error">Некорректный номер телефона</string>
    <string name="code_error">Неверный код подтверждения</string>
    <string name="code_incorrect">Некорректный код подтверждения</string>
    <string name="verif_code">Код подтверждения</string>
    <string name="code_description">Пожалуйста введите код подтверждения который был отправлен на</string>
    <string name="code">Код</string>
    <string name="didnt_get_code">Не получили код? <b>Отправить ещё раз</b></string>
    <string name="verifying_phone">Подтверждение номера телефона</string>
    <string name="verifying_code">Проверка кода</string>
    <string name="sent_code">Код подтверждения отправлен</string>
    <string name="verif_error">Ошибка подтверждения</string>
    <string name="auto_conf">Автоматическое подтверждение</string>
    <string name="please_wait">Пожалуйста подождите...</string>

    <!-- Food Fragment -->
    <string name="pizza_title">Пицца</string>
    <string name="snacks_title">Закуски</string>
    <string name="drinks_title">Напитки</string>
</resources>